welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: '(' expected but identifier found.
if (isWeekend) {(if cigars>=40) {return true}
                    ^cigarParty:7: error: illegal start of simple expression
}} 
^